<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.fictivestudios.basinboatlighting.ui.registration.login.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_img"
        android:fillViewport="true"
        tools:context=".activities.RegistrationActivity"
        >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginScreen"
>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />


        <androidx.cardview.widget.CardView
            android:id="@+id/loginblur"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cardElevation="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardBackgroundColor="@color/bluecard"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logintext">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:drawableLeft="@drawable/envelope"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColorHint="@color/white"

                    android:background="@drawable/edittext_bg"
                    android:hint="@string/emailhint"
                    android:paddingStart="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/passwordhint"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/lock"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email" />

                <ImageView
                    android:id="@+id/siginpasssow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/visibility"
                    app:layout_constraintTop_toTopOf="@id/password"
                    android:layout_marginRight="@dimen/_5sdp"
                    app:layout_constraintRight_toRightOf="@id/password"
                    android:layout_marginTop="@dimen/_10sdp"
                    ></ImageView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgetpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/forgetpassword"
                    android:textColor="@color/app_yellow"
                    app:layout_constraintEnd_toEndOf="@id/password"
                    app:layout_constraintTop_toBottomOf="@id/password" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/button_bg"
                    android:text="@string/loginButtonText"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/forgetpassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/donthaveaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/donthaveaccount"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>