<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="updateViewModel"
            type="com.fictivestudios.basinboatlighting.ui.home.updatepassword.UpdatePasswordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_img"
        android:id="@+id/updatePaswwordscreen"
        tools:context=".activities.RegistrationActivity">


        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
           app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/logintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/updatepassword"
            android:textColor="@color/white"

            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
          />


        <androidx.cardview.widget.CardView
            android:id="@+id/loginblur"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardBackgroundColor="@color/bluecard"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logintext">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/old_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColorHint="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:inputType="textPassword"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/oldpassword"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.appcompat.widget.AppCompatEditText>


                <ImageView
                    android:id="@+id/upoldpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/visibility"
                    app:layout_constraintTop_toTopOf="@id/old_password"
                    android:layout_marginRight="@dimen/_5sdp"
                    app:layout_constraintRight_toRightOf="@id/old_password"
                    android:layout_marginTop="@dimen/_10sdp"
                    ></ImageView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/white"
                    android:layout_marginEnd="10dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/passwordhint"
                    android:paddingLeft="@dimen/_15sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:drawableLeft="@drawable/lock"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/old_password" />

                <ImageView
                    android:id="@+id/upnewpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/visibility"
                    app:layout_constraintTop_toTopOf="@id/password"
                    android:layout_marginRight="@dimen/_5sdp"
                    app:layout_constraintRight_toRightOf="@id/password"
                    android:layout_marginTop="@dimen/_10sdp"
                    ></ImageView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/cpassword"
                    android:paddingLeft="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/lock"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password" />


                <ImageView
                    android:id="@+id/upconfirmpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/visibility"
                    app:layout_constraintTop_toTopOf="@id/cpassword"
                    android:layout_marginRight="@dimen/_5sdp"
                    app:layout_constraintRight_toRightOf="@id/cpassword"
                    android:layout_marginTop="@dimen/_10sdp"
                    ></ImageView>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/updatePassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/button_bg"
                    android:text="@string/updatepassword"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cpassword" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>